--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AgriDrone Control - Smart Pesticide Spraying System</title>
+  <title>Agriguard - Smart Drone Farming</title>
   <meta name="description" content="Intelligent pesticide spraying drone system for precision agriculture. Monitor crop health, control AI-powered drones, and maximize yield with smart farming technology." />
   <meta name="author" content="AgriDrone Systems" />
 
