--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico">
   <link rel="manifest" href="/favicon/site.webmanifest">
 
-  <meta property="og:title" content="AgriDrone Control - Smart Pesticide Spraying System" />
+  <meta property="og:title" content="Agriguard - Smart Drone Farming" />
   <meta property="og:description" content="Intelligent pesticide spraying drone system for precision agriculture. Monitor crop health, control AI-powered drones, and maximize yield with smart farming technology." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+ 
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@agridrone" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
   </head>
 
   <body>
